--- a/eid.html
+++ b/eid.html
@@ -30,5 +30,49 @@
           <iframe width="560" height="315" src="https://www.youtube.com/embed/oYaup62gFUw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
+    <section class="unique">
+       <div class="selector">
+        <img src="image/tazbi.jpeg" alt="">
+       </div>
+       <div class="they">
+        <h1><span>They</span> need us </h1>
+          <h1>to <span>suvive</span></h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam suscipit nostrum non perspiciatis, perferendis temporibus reiciendis voluptatibus eum possimus distinctio aut, eos in vitae! Deleniti ducimus assumenda accusamus magnam quas rem perspiciatis molestias pariatur, ab tempore, fugit voluptate, ipsum recusandae suscipit voluptas labore! Maiores porro fugiat atque illo, enim omnis?</p>
+          <a href="" id="ancor">Explore More</a>
+       </div>
+    </section>
+    <div class="depend">
+      <h1>Their lives depend on</h1>
+      <h1>your donation</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis explicabo suscipit sunt officiis quidem laboriosam, quaerat quis distinctio delectus <br> magni incidunt rem ipsam aliquam consequuntur laborum repellendus? Ad, iure tempora?</p>
+    </div>
+    <section class="navi">
+      <nav class="navi">
+      <nav class="nav">
+        <img src="image/icon.png" alt="">
+        <h1>Direct <span> Help</span></h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque fuga consequuntur perspiciatis est aspernatur cupiditate quo molestiae non eum pariatur?</p>
+      </nav>
+      <nav class="nav">
+        <img src="image/icon.png" alt="">
+        <h1>Direct <span> Help</span></h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque fuga consequuntur perspiciatis est aspernatur cupiditate quo molestiae non eum pariatur?</p>
+      </nav>
+      </nav>
+    </section>
+    <section>
+      <nav class="navi">
+        <nav class="help">
+          <img src="image/icon.png" alt="">
+          <h1>Direct <span> Help</span></h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque fuga consequuntur perspiciatis est aspernatur cupiditate quo molestiae non eum pariatur?</p>
+        </nav>
+        <nav class="help">
+          <img src="image/icon.png" alt="">
+          <h1>Direct <span> Help</span></h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque fuga consequuntur perspiciatis est aspernatur cupiditate quo molestiae non eum pariatur?</p>
+        </nav>
+      </nav>
+    </section>
 </body>
 </html>
